# forge-improved

./: CODEX.md  CREDITS.md  DECISIONS.md  README.md  pyproject.toml
agents/: README.md
docs/: agents.md  argos-loop-hardening-2026-07-15.md  artifacts.md  codex-session-2026-07-18.md  false-positive-ledger.md  fp-fn-reduction-2026-07-17.md  hackathon-demo-script.md  hackathon.md  mcp.md  model-routing.md  phylo-codex-v2-integration-learnings.en.md  phylo-demo-mcp-prompt.md  real-repository-case-studies.md  recall-gap-closure-lot-1.md  recall-gap-closure-lot-2.md  red-team-skills-2026-07-18.md  seal-authentication.md  seeded-recall-corpus.md  skills.md  technical-companion.html  vigia-honest-degradation-breadth-2026-07-17.md  vigia-inspired-governance.md
forge/: __init__.py  __main__.py  agent_independence.py  agent_protocol.py  attestation.py  cli.py  detector_scope.py  disposition.py  evidence_package.py  findings_narrator.py  hypotheses.py  induction.py  loop_mcp.py  mcp_server.py  metrics.py  models.py  multi_agent.py  orchestrator.py  precision.py  recall.py  report.py  reporting.py  runtime.py  sealing.py  severity.py  sharding.py  tiered_report.py  verification.py
tests/: test_agent_independence.py  test_agent_protocol.py  test_caller_counts_performance.py  test_entry_points.py  test_executable_skills.py  test_findings_narrator.py  test_fp_reduction.py  test_hardening.py  test_harness.py  test_induction_sandbox.py  test_mcp_server.py  test_metrics.py  test_module1.py  test_module3.py  test_multi_agent.py  test_orchestrator.py  test_precision.py  test_recall.py  (+12 more)
(+138 files in other folders)
