[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-audit"
version = "0.1.0"
description = "Deterministic multi-agent forensic repository governance and audit engine."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Anna Tchijova" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# The core audit path (discovery, agents, sealing, reporting) is stdlib-only
# by design (see docs/model-routing.md) - no third-party dependency is
# required to run `forge audit`. mcp/cronos-slack are separate, optional
# frontends and are declared as extras, not core dependencies.
dependencies = []

[project.optional-dependencies]
mcp = ["mcp"]
cronos-slack = ["slack_sdk"]

[project.urls]
Homepage = "https://github.com/annatchijova/forge"
Documentation = "https://github.com/annatchijova/forge/tree/main/docs"

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.setuptools.package-data]
forge = ["skills/**/*.json", "skills/**/*.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
